[package]
name = "imdirdiff"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-compare = "0.3.0"
image = "*"
walkdir = "2.3.3"
ansi-str = "0.8.0"
yansi = "0.5.1"
regex = "1.9.5"
once_cell = "1.18.0"
argh = "0.1.12"
